# mobile_robots_lab_ss15

./: README.md  analyze_image.cpp  ardrone.urdf  ardrone_sensors.yaml  move.cpp  record_video.cpp
ardrone_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ardrone_moveit/config/: ardrone.srdf  ardrone_sensors.yaml  fake_controllers.yaml  ompl_planning.yaml
ardrone_moveit/launch/: ardrone_moveit_sensor_manager.launch.xml  ardrone_moveit_sensor_manager.launch.xml~  default_warehouse_db.launch  demo.launch  move_group.launch  moveit.rviz  planning_context.launch  sensor_manager.launch.xml  sensor_manager.launch.xml~  trajectory_execution.launch.xml  warehouse.launch
ardrone_sources/: CMakeLists.txt  calibration_front.cfg  const_height.cpp  detect_direction.cpp  fly_and_show.cpp  reset.cpp
drone_lab/: CMakeLists.txt  calibration_front.cfg  package.xml  path.txt  pc.ply  pc1.ply
drone_lab/src/: analyze_image.cpp  detect_direction.cpp  land.cpp  takeoff.cpp
experiment_03/: CMakeLists.txt  CMakeLists.txt~  confi_experiment3-3.rviz  package.xml  package.xml~
experiment_03/launch/: robo_3_0_simulation.launch  robo_3_0_simulation.launch~  robo_3_1_roomrider.launch  robo_3_1_simulation.launch~  robo_3_2_1_simulation.launch  robo_3_2_roomrider.launch  robo_3_2_simulation.launch  robo_3_2_simulation.launch~
experiment_03/src/: robo_3_1.cpp  robo_3_1.cpp~
llab_01/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
llab_01/launch/: legs_follower_roomrider.launch  legs_follower_roomrider.launch~  legs_follower_simulation.launch  legs_follower_simulation.launch~  robo_01_roomrider.launch~  robo_02_roomrider.launch~  robo_02_simulation.launch~  robo_03_roomrider.launch~  robo_04_roomrider.launch~  scanner_simulation.launch  scanner_simulation.launch~  smooth_derivative_roomrider.launch  smooth_derivative_roomrider.launch~  smooth_derivative_simulation.launch  wall_follower_roomrider.launch  wall_follower_roomrider.launch~  wall_follower_simulation.launch~
llab_01/src/: legs_follower.cpp  legs_follower.cpp~  robo_02.cpp~  scanner.cpp  scanner.cpp~  smooth_derivative.cpp  (+3 more)
